--- a/zet/index.html
+++ b/zet/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="ZetWallet">
     <link rel="apple-touch-icon" href="zet.jpg">  
-    <title>ZetWallet</title>
+    <title>ZET BANK</title>
 </head>
 <body>
     <div class="rubles-div">
