--- a/home.html
+++ b/home.html
@@ -17,7 +17,10 @@
     </div>
     <div class="popolnenie-wallet"><h1 class="popwal">Пополнить кошелек</h1></div>
     <div class="payments-div">
-        <h1>Платежи и переводы</h1>
+        <h1 class="platezhi-text">
+            Платежи и переводы
+            <span class="all-text">Все</span>
+        </h1>
         <div class="pays">
             <div class="pay-zet">
                 <img class="zet-pay" src="zet.jpg" alt="ZET Кошелек">
