--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
             <!-- Дополнительные иконки и тексты -->
             <div class="pay-other">
                 <img class="zet-pay" src="sbp.png" alt="СБП">
-                <p class="zet-text">СБП</p>
+                <p class="zet-text">СБП (не<br>доступно)</p>
             </div>
             <div class="pay-other">
                 <img class="zet-pay" src="p2pm.png" alt="P2P Маркет">
